--- a/project-sprint2/src/index.html
+++ b/project-sprint2/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script   src="https://www.paypal.com/sdk/js?client-id=AbCDFvEn2p6ZxxwVbxOZxO7UT0Hs2DbtxrBTL4ghQP1if_TAXZ0Ar7X45b7SY9IneRwDCiPBD0DLr4Pk"></script>
 </head>
 <body>
   <app-root></app-root>
